--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -25,7 +25,7 @@
 .nav-logo__container {
 	position: relative;
 	/* Changing Logo Position */
-	left: -100px;
+	left: -94px;
 	justify-self: center;
 	text-decoration: none;
 	cursor: pointer;
@@ -48,16 +48,16 @@
 	justify-content: end;
 }
 
-.nav-bar__items > .v-toolbar__content ul, .nav-bar__items > .v-toolbar__content ol {
+.v-application ul, .v-application ol {
     padding-left: 0 !important;
 }
 
-.nav-bar__items > .v-toolbar__content a {
+.v-application a {
 	color: white !important;
 	text-decoration: none;
 	transition: all 0.4s;
 }
-.nav-bar__items > .v-toolbar__content a:hover {
+.v-application a:hover {
 	color: rgb(151, 151, 151) !important;
 	text-decoration: none;
 	transition: background-color 0.4s ease-out, color 0.3s ease-out;
