--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -35,6 +35,7 @@
 
 .nav-logo__container a h1:first-letter {
 	font-style: italic;
+	
 }
 
 
@@ -65,6 +66,17 @@
 
 .menu-link{
 	cursor: pointer;
+}
+
+li.logout-button {
+	cursor: pointer;
+	transition: all 0.4s;
+}
+
+li.logout-button:hover {
+	color: rgb(151, 151, 151) !important;
+	cursor: pointer;
+	transition: background-color 0.4s ease-out, color 0.3s ease-out;
 }
 
 .menu-link:hover{
@@ -127,6 +139,8 @@
 		font-weight: bold;
 		border-radius: 0;
 	}
+
+	
 
 	.navbar-logo {
 		position: absolute;
